overflow on home fixed

--- a/web/app/themes/blank/src/scss/layout/_home.scss
+++ b/web/app/themes/blank/src/scss/layout/_home.scss
@@ -2,26 +2,19 @@ $mb: 2rem;
 
 .home {
   .container {
-    padding : 50px 90px;
+    padding: 50px 90px;
+
     @include breakpoint(md) {
-      padding : 50px 0px;
+      padding: 50px 0px;
     }
   }
+
   h2,
   h3 {
     font-weight: 800;
     color: $black;
   }
 
-
-
-  .container {
-    // width: 80%;
-
-    // @include breakpoint(md) {
-    //   width: 90%;
-    // }
-  }
 
   // center button and img
   @include breakpoint(md) {
@@ -69,36 +62,36 @@ $mb: 2rem;
 
   .trial_btn {
     @include button(16px);
-    height:60px;
+    height: 60px;
   }
 
   .demo_btn {
     @include button(16px, hollow);
-    height:60px;
+    height: 60px;
   }
 
   .grid_btn_2 {
     width: 55%;
     display: flex;
     justify-content: center;
-    gap:30px;
+    gap: 30px;
     align-items: center;
     margin: 70px auto 1rem;
-    
+
     // @include breakpoint(lg) {
     //   width: 65%;
     //   button {
     //     font-size: 14px;
     //   }
     // }
-    
+
     // button {
     //   min-width: 240px;
     //   @include breakpoint(sm) {
     //     font-size: 12px;
     //   }
     // }
-    
+
     @include breakpoint(md) {
       flex-direction: column;
       margin: 3rem auto;
@@ -110,9 +103,9 @@ $mb: 2rem;
 .hero_2,
 .hero_3 {
   background-color: $light-color;
-  
+
   .trial_btn {
-      @include button(16px);
+    @include button(16px);
   }
 }
 
@@ -120,10 +113,12 @@ $mb: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap:30px;
-  p{
+  gap: 30px;
+
+  p {
     text-align: center;
   }
+
   .full_btn {
     @include button(16px);
     height: 60px;
@@ -140,9 +135,11 @@ $mb: 2rem;
   @include breakpoint(md) {
     grid-template-columns: 1fr;
   }
+
   .left_box {
     align-self: center;
   }
+
   h2 {
     font-weight: 800;
     margin-bottom: $mb;
@@ -156,7 +153,7 @@ $mb: 2rem;
   img {
     width: 575px;
     border-radius: 30px;
-  } 
+  }
 
   .hollow_trial_btn {
     @include button(16px, hollow);
@@ -168,6 +165,7 @@ $mb: 2rem;
     }
   }
 }
+
 .hero_4_box {
   .trial_btn {
     @include button(16px);
@@ -175,33 +173,40 @@ $mb: 2rem;
 }
 
 .feats_section {
-  .feats_display_container {
-    width : 1366px;
-    position: relative;
-    @include breakpoint(xl) {
-      width:100%;
-    }
+  overflow: hidden;
 
+  .feats_display_container {
+    width: 1366px;
+    position: relative;
+
+    @include breakpoint(xl) {
+      width: 100%;
+    }
   }
+
   .img_shadow {
     z-index: -1;
     position: absolute;
-    left : 43px;
-    width : 317px;
-    height : 288px;
+    left: 43px;
+    width: 317px;
+    height: 288px;
     background-color: rgba(255, 115, 0, 0.1);
     border-radius: 30px;
     transform: rotate(-45deg);
+    overflow: hidden;
   }
+
   .feat_container:nth-of-type(even) .img_shadow {
     transform: rotate(45deg);
     left: auto;
     right: 43px;
-}
+  }
+
   h2 {
     text-align: center;
     margin: 2rem 0 4rem;
-    @include breakpoint(xs){
+
+    @include breakpoint(xs) {
       font-size: 36px;
     }
   }
@@ -211,6 +216,7 @@ $mb: 2rem;
   margin-bottom: 2em;
   display: grid;
   grid-template-columns: 50% 50%;
+
   .side_grid {
     padding-top: 60px;
   }
@@ -221,17 +227,18 @@ $mb: 2rem;
 
   li {
     padding: 1px 0;
-    margin-bottom : 10px;
+    margin-bottom: 10px;
   }
 
   img {
     width: 100%;
-    max-width:433px;
+    max-width: 433px;
     justify-self: center;
   }
 
   .feat_btn {
     @include button(16px, hollow);
+
     &:hover {
       @include breakpoint(md) {
         transform: scale(1.05) translateX(-48%);
@@ -256,6 +263,7 @@ $mb: 2rem;
 
   @include breakpoint(md) {
     grid-template-columns: 1fr;
+
     img {
       width: 50%;
       margin: auto;
@@ -264,7 +272,7 @@ $mb: 2rem;
 
   .feat_list {
     li::marker {
-      color : $main-color;
+      color: $main-color;
     }
   }
 }
